--- a/memeMe/Base.lproj/Main.storyboard
+++ b/memeMe/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,129 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="memeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="m1H-v1-cEX">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="thB-y4-eY6">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <items>
+                                            <navigationItem title="MemeMe" id="8SO-WC-z6V">
+                                                <barButtonItem key="leftBarButtonItem" title="Share" id="Xy8-H3-dpe">
+                                                    <connections>
+                                                        <action selector="shareMeme:" destination="BYZ-38-t0r" id="HzB-fB-uNh"/>
+                                                    </connections>
+                                                </barButtonItem>
+                                                <barButtonItem key="rightBarButtonItem" title="CANCEL" id="MTO-bs-Xn9">
+                                                    <connections>
+                                                        <action selector="resetMem:" destination="BYZ-38-t0r" id="yFt-W8-ReB"/>
+                                                    </connections>
+                                                </barButtonItem>
+                                            </navigationItem>
+                                        </items>
+                                    </navigationBar>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JCw-fS-yW6">
+                                        <rect key="frame" x="0.0" y="44" width="375" height="573"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMY-X9-D1v">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="573"/>
+                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </imageView>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mXk-MW-XUA">
+                                                <rect key="frame" x="168" y="43" width="39" height="19"/>
+                                                <attributedString key="attributedText">
+                                                    <fragment content="TOP">
+                                                        <attributes>
+                                                            <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <font key="NSFont" size="52" name="Arial-BoldMT"/>
+                                                            <font key="NSOriginalFont" size="52" name="Arial-BoldMT"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        </attributes>
+                                                    </fragment>
+                                                </attributedString>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OL3-xb-z58">
+                                                <rect key="frame" x="139" y="514" width="97" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="Gyy-gZ-COe"/>
+                                                    <constraint firstAttribute="width" constant="97" id="IPa-U7-xvg"/>
+                                                </constraints>
+                                                <attributedString key="attributedText">
+                                                    <fragment content="BOTTOM">
+                                                        <attributes>
+                                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <font key="NSFont" size="43" name="Arial-BoldMT"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        </attributes>
+                                                    </fragment>
+                                                </attributedString>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="RMY-X9-D1v" secondAttribute="bottom" id="6hm-rR-96z"/>
+                                            <constraint firstItem="RMY-X9-D1v" firstAttribute="leading" secondItem="JCw-fS-yW6" secondAttribute="leading" id="DsH-Ox-aaz"/>
+                                            <constraint firstItem="RMY-X9-D1v" firstAttribute="top" secondItem="JCw-fS-yW6" secondAttribute="top" id="HD0-Xg-cbs"/>
+                                            <constraint firstItem="RMY-X9-D1v" firstAttribute="top" secondItem="mXk-MW-XUA" secondAttribute="bottom" constant="-62" id="IkO-5e-3wU"/>
+                                            <constraint firstAttribute="bottom" secondItem="RMY-X9-D1v" secondAttribute="bottom" id="KBo-qf-1n0"/>
+                                            <constraint firstAttribute="trailing" secondItem="RMY-X9-D1v" secondAttribute="trailing" id="KGL-dG-XdH"/>
+                                            <constraint firstItem="mXk-MW-XUA" firstAttribute="centerX" secondItem="RMY-X9-D1v" secondAttribute="centerX" id="NVL-0z-IHe"/>
+                                            <constraint firstAttribute="trailing" secondItem="RMY-X9-D1v" secondAttribute="trailing" id="O6y-Jg-EcB"/>
+                                            <constraint firstItem="OL3-xb-z58" firstAttribute="centerX" secondItem="RMY-X9-D1v" secondAttribute="centerX" id="WGW-Nm-Tph"/>
+                                            <constraint firstItem="RMY-X9-D1v" firstAttribute="leading" secondItem="JCw-fS-yW6" secondAttribute="leading" id="irR-LQ-VWG"/>
+                                            <constraint firstItem="RMY-X9-D1v" firstAttribute="top" secondItem="JCw-fS-yW6" secondAttribute="top" id="mXf-lX-OXH"/>
+                                            <constraint firstAttribute="bottom" secondItem="OL3-xb-z58" secondAttribute="bottom" constant="29" id="tjA-Ka-NKR"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0mO-Bm-HMb">
+                                        <rect key="frame" x="0.0" y="617" width="375" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjG-Hq-fr9">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="30"/>
+                                                <state key="normal" title="Camera"/>
+                                                <connections>
+                                                    <action selector="openCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aQL-Gn-wHN"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DG6-9r-ryf">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="30"/>
+                                                <state key="normal" title="ALbum"/>
+                                                <connections>
+                                                    <action selector="showALbum:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qWL-OV-k11"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="m1H-v1-cEX" secondAttribute="bottom" id="WY9-wG-hqT"/>
+                            <constraint firstItem="m1H-v1-cEX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jwA-FS-Azs"/>
+                            <constraint firstItem="m1H-v1-cEX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pRo-LZ-kPr"/>
+                            <constraint firstAttribute="trailing" secondItem="m1H-v1-cEX" secondAttribute="trailing" id="szO-uN-s0t"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="bottomButtons" destination="0mO-Bm-HMb" id="ssO-0X-bG9"/>
+                        <outlet property="bottomTextField" destination="OL3-xb-z58" id="gOY-Jm-NFM"/>
+                        <outlet property="cameraButton" destination="xjG-Hq-fr9" id="4Ap-Oc-HI0"/>
+                        <outlet property="imageViewMeme" destination="RMY-X9-D1v" id="0Bl-E1-xfa"/>
+                        <outlet property="navigator" destination="thB-y4-eY6" id="YSs-ud-nri"/>
+                        <outlet property="topTextField" destination="mXk-MW-XUA" id="1IY-I5-BYH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
         </scene>
     </scenes>
 </document>
