--- a/memeMe/Base.lproj/Main.storyboard
+++ b/memeMe/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,14 +15,14 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MemeEditorViewController" customModule="memeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="m1H-v1-cEX">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                                 <subviews>
                                     <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="thB-y4-eY6">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="480" height="32"/>
                                         <items>
                                             <navigationItem title="MemeMe" id="8SO-WC-z6V">
                                                 <barButtonItem key="leftBarButtonItem" systemItem="action" id="Xy8-H3-dpe">
@@ -39,14 +39,14 @@
                                         </items>
                                     </navigationBar>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JCw-fS-yW6">
-                                        <rect key="frame" x="0.0" y="44" width="375" height="573"/>
+                                        <rect key="frame" x="0.0" y="32" width="480" height="244"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMY-X9-D1v">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="573"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMY-X9-D1v">
+                                                <rect key="frame" x="0.0" y="0.0" width="480" height="244"/>
                                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mXk-MW-XUA">
-                                                <rect key="frame" x="168" y="43" width="39" height="19"/>
+                                                <rect key="frame" x="220.5" y="43" width="39" height="19"/>
                                                 <attributedString key="attributedText">
                                                     <fragment content="TOP">
                                                         <attributes>
@@ -60,7 +60,7 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OL3-xb-z58">
-                                                <rect key="frame" x="139" y="514" width="97" height="30"/>
+                                                <rect key="frame" x="191.5" y="185" width="97" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="Gyy-gZ-COe"/>
                                                     <constraint firstAttribute="width" constant="97" id="IPa-U7-xvg"/>
@@ -93,36 +93,34 @@
                                             <constraint firstAttribute="bottom" secondItem="OL3-xb-z58" secondAttribute="bottom" constant="29" id="tjA-Ka-NKR"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0mO-Bm-HMb">
-                                        <rect key="frame" x="0.0" y="617" width="375" height="30"/>
-                                        <subviews>
-                                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zeT-l4-kSQ">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
-                                                <items>
-                                                    <barButtonItem style="plain" id="rVW-Ct-kw9">
-                                                        <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xjG-Hq-fr9">
-                                                            <rect key="frame" x="16" y="0.0" width="187.5" height="30"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <state key="normal" title="Camera"/>
-                                                            <connections>
-                                                                <action selector="openCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aQL-Gn-wHN"/>
-                                                            </connections>
-                                                        </button>
-                                                    </barButtonItem>
-                                                    <barButtonItem style="plain" id="oKr-Ki-ymR">
-                                                        <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="DG6-9r-ryf">
-                                                            <rect key="frame" x="234" y="0.0" width="125" height="30"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <state key="normal" title="ALbum"/>
-                                                            <connections>
-                                                                <action selector="showALbum:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qWL-OV-k11"/>
-                                                            </connections>
-                                                        </button>
-                                                    </barButtonItem>
-                                                </items>
-                                            </toolbar>
-                                        </subviews>
-                                    </stackView>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zeT-l4-kSQ">
+                                        <rect key="frame" x="0.0" y="276" width="480" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="qWi-uQ-ZfT"/>
+                                        </constraints>
+                                        <items>
+                                            <barButtonItem style="plain" id="rVW-Ct-kw9">
+                                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xjG-Hq-fr9">
+                                                    <rect key="frame" x="16" y="7" width="187.5" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Camera"/>
+                                                    <connections>
+                                                        <action selector="openCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aQL-Gn-wHN"/>
+                                                    </connections>
+                                                </button>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" id="oKr-Ki-ymR">
+                                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="DG6-9r-ryf">
+                                                    <rect key="frame" x="339" y="7" width="125" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="ALbum"/>
+                                                    <connections>
+                                                        <action selector="showALbum:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qWL-OV-k11"/>
+                                                    </connections>
+                                                </button>
+                                            </barButtonItem>
+                                        </items>
+                                    </toolbar>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -136,7 +134,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="bottomButtons" destination="0mO-Bm-HMb" id="ssO-0X-bG9"/>
+                        <outlet property="bottomButtons" destination="zeT-l4-kSQ" id="HzR-3x-TST"/>
                         <outlet property="bottomTextField" destination="OL3-xb-z58" id="gOY-Jm-NFM"/>
                         <outlet property="cameraButton" destination="xjG-Hq-fr9" id="4Ap-Oc-HI0"/>
                         <outlet property="imageViewMeme" destination="RMY-X9-D1v" id="0Bl-E1-xfa"/>
