bug: change entry point to navigation controller

--- a/memeMe/Base.lproj/Main.storyboard
+++ b/memeMe/Base.lproj/Main.storyboard
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-
-
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lt2-ji-nP6">
     <device id="retina3_5" orientation="landscape">
-
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -20,21 +16,17 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MemeEditorViewController" customModule="memeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-
                         <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="m1H-v1-cEX">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
+                                <rect key="frame" x="0.0" y="32" width="480" height="288"/>
                                 <subviews>
                                     <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="thB-y4-eY6">
                                         <rect key="frame" x="0.0" y="0.0" width="480" height="32"/>
-
                                         <items>
                                             <navigationItem title="MemeMe" id="8SO-WC-z6V">
-
                                                 <barButtonItem key="leftBarButtonItem" enabled="NO" systemItem="action" id="Xy8-H3-dpe">
-
                                                     <connections>
                                                         <action selector="shareMeme:" destination="BYZ-38-t0r" id="HzB-fB-uNh"/>
                                                     </connections>
@@ -48,16 +40,14 @@
                                         </items>
                                     </navigationBar>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JCw-fS-yW6">
-
-                                        <rect key="frame" x="0.0" y="32" width="480" height="244"/>
+                                        <rect key="frame" x="0.0" y="32" width="480" height="212"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMY-X9-D1v">
-                                                <rect key="frame" x="0.0" y="0.0" width="480" height="244"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="480" height="212"/>
                                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mXk-MW-XUA">
                                                 <rect key="frame" x="220.5" y="43" width="39" height="19"/>
-
                                                 <attributedString key="attributedText">
                                                     <fragment content="TOP">
                                                         <attributes>
@@ -71,9 +61,7 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OL3-xb-z58">
-
-                                                <rect key="frame" x="191.5" y="185" width="97" height="30"/>
-
+                                                <rect key="frame" x="191.5" y="153" width="97" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="Gyy-gZ-COe"/>
                                                     <constraint firstAttribute="width" constant="97" id="IPa-U7-xvg"/>
@@ -106,9 +94,8 @@
                                             <constraint firstAttribute="bottom" secondItem="OL3-xb-z58" secondAttribute="bottom" constant="29" id="tjA-Ka-NKR"/>
                                         </constraints>
                                     </view>
-
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zeT-l4-kSQ">
-                                        <rect key="frame" x="0.0" y="276" width="480" height="44"/>
+                                        <rect key="frame" x="0.0" y="244" width="480" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="qWi-uQ-ZfT"/>
                                         </constraints>
@@ -135,7 +122,6 @@
                                             </barButtonItem>
                                         </items>
                                     </toolbar>
-
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -167,7 +153,7 @@
             <objects>
                 <navigationController id="lt2-ji-nP6" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WWh-dS-EF8">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="32"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -176,14 +162,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="39O-pM-Yh9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1452" y="1061"/>
+            <point key="canvasLocation" x="-710" y="962"/>
         </scene>
         <!--Meme Grid View Controller-->
         <scene sceneID="fhw-gh-2h4">
             <objects>
                 <collectionViewController id="GFs-eW-pl5" customClass="MemeGridViewController" customModule="memeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="6PK-xh-ebT">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7D3-pS-MJO">
@@ -246,15 +232,15 @@
             <objects>
                 <tableViewController id="Bxb-JG-mhF" customClass="MemeTableViewController" customModule="memeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ZFh-aR-zCX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="memeCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="memeCell" textLabel="4Is-CB-bAL" detailTextLabel="nnn-Cs-4qd" style="IBUITableViewCellStyleSubtitle" id="BcS-lf-Pe7">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="480" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BcS-lf-Pe7" id="Uuw-fD-Qae">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="480" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4Is-CB-bAL">
@@ -292,17 +278,17 @@
             <objects>
                 <viewController storyboardIdentifier="ShowMemeController" id="ydc-qI-pdD" customClass="ShowMemeViewController" customModule="memeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k9Q-yy-oHL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vSZ-uo-Cf3">
-                                <rect key="frame" x="16" y="67" width="343" height="193"/>
+                                <rect key="frame" x="16" y="47" width="448" height="252"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="vSZ-uo-Cf3" secondAttribute="height" multiplier="16:9" id="KwC-JJ-jCa"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVU-QI-w3U">
-                                <rect key="frame" x="16" y="339" width="343" height="21"/>
+                                <rect key="frame" x="16" y="378" width="448" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -351,7 +337,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="umy-iu-71Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-665" y="1012"/>
+            <point key="canvasLocation" x="30" y="1059"/>
         </scene>
     </scenes>
     <resources>
